WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
135706
border-radius on html does not render properly.
https://bugs.webkit.org/show_bug.cgi?id=135706
Summary
border-radius on html does not render properly.
alan
Reported
2014-08-07 10:27:54 PDT
<style> html { border-radius: 100%; background-color: green; } </style>
Attachments
Patch
(3.42 KB, patch)
2014-08-07 10:32 PDT
,
alan
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
alan
Comment 1
2014-08-07 10:32:05 PDT
Created
attachment 236194
[details]
Patch
WebKit Commit Bot
Comment 2
2014-08-07 11:23:32 PDT
Comment on
attachment 236194
[details]
Patch Clearing flags on attachment: 236194 Committed
r172218
: <
http://trac.webkit.org/changeset/172218
>
WebKit Commit Bot
Comment 3
2014-08-07 11:23:35 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug